<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UserLogin">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_bg"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/login_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="15dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/login"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/UserName"
            android:textSize="17sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/email"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:shadowColor="@color/gray"
            android:drawableRight="@drawable/baseline_check_circle_outline_24"
            app:layout_constraintTop_toBottomOf="@+id/title_email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_psw"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/password"
            android:textSize="17sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/password"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawableRight="@drawable/baseline_remove_red_eye_24"
            android:shadowColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/title_psw"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_continue"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/continue_txt"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_bg" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_continue"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="18dp"
            android:text="@string/help"
            android:textSize="15sp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>