<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">





    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/order_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/productimage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/price"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="bold"
        android:text="@string/price"
        android:textSize="25sp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/image"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/order_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/order_bg">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shape"
            android:src="@drawable/shape"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/layout"

            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/share"
                android:src="@drawable/share_btn"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/orderButton"
                app:layout_constraintTop_toBottomOf="@id/password"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:text="@string/order"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_bg"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            app:layout_constraintTop_toBottomOf="@id/layout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="15dp"
            android:textStyle="italic"
            android:text="@string/product_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/des"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:text="@string/description_detail"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rating_layout"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/rating_bg"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/des">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:text="Reviews (100)"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:id="@+id/rating_count"
                app:layout_constraintTop_toBottomOf="@id/rating"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating_bar"
                android:theme="@style/RatingBar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>