<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product"
        app:layout_constraintTop_toTopOf="parent">



        <androidx.cardview.widget.CardView
            android:id="@+id/cv_wrapper"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="20dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/productImg"
                android:scaleType="centerInside"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="10dp"
                android:src="@drawable/product_image"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:padding="16dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/price"
                    android:gravity="bottom"
                    android:text="@string/price"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/rating"
                    android:theme="@style/RatingBar"/>
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/productName"
            app:layout_constraintTop_toBottomOf="@id/cv_wrapper"
            app:layout_constraintLeft_toLeftOf="@id/cv_wrapper"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:textColor="@color/gray"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/productDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_detail"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productName"
            tools:layout_editor_absoluteY="244dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>







</androidx.constraintlayout.widget.ConstraintLayout>